# libkipr_link_depth_sensor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  libkipr_link_depth_sensor.sln  libkipr_link_depth_sensor.vcxproj  libkipr_link_depth_sensor.vcxproj.filters
doxygen/: Doxyfile  Doxyfile++
examples/: display_center_distance.c
include/: AsusXtionDepthDriver.hpp  Depth.hpp  DepthDriver.hpp  DepthMap.hpp  DepthMapResolution.h  Point.hpp  depth.h  depth.hpp
include/libkipr_link_depth_sensor/: AsusXtionDepthDriver.hpp  BoundingBox.hpp  DepthDriver.hpp  DepthImage.hpp  DepthImageResolution.h  DepthMap.hpp  DepthMapResolution.h  OctreePointCloud.hpp  OpenNI2DepthDriver.hpp  OpenNI2DepthImage.hpp  OpenNI2DepthMap.hpp  OpenNI2Point.hpp  OpenNI2PointCloud.hpp  Point.hpp  PointCloud.hpp  PointCloud2D.hpp  WorldCoordinate.hpp  depth.h
kiss_ide_examples/: change_resolution.c  display_center_distance.c  display_scan_line.c
kiss_ide_examples/display_depth_image/: display_depth_image.c
kiss_ide_examples/show_point_cloud/: show_point_cloud.c  show_point_cloud.kissproj
src/: AsusXtionDepthDriver.cpp  Depth.cpp  DepthDriver.cpp  DepthMap.cpp  OctreePointCloud.cpp  OpenNI2DepthDriver.cpp  OpenNI2DepthImage.cpp  OpenNI2DepthMap.cpp  OpenNI2Point.cpp  OpenNI2PointCloud.cpp  PointCloud.cpp  PointCloud2D.cpp  depth.cpp  depth_c.cpp
